--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "erik/xhprof",
+    "name": "erikwang2013/xhprof",
     "description": "Xhprof web interface browsing, suitable for web, larravel, tp and other frameworks",
     "keywords": [
         "erikwang2013",
