--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,32 @@
 {
-    "name": "erikwang2013/xhprof",
+    "name": "erikwang2013/xhprof-webman",
     "description": "Xhprof web interface browsing, suitable for web, larravel, tp and other frameworks",
     "keywords": [
         "erikwang2013",
         "erik",
-        "xhprof"
+        "xhprof",
+        "webman"
     ],
     "type": "library",
     "license": "MIT",
     "authors": [
         {
             "name": "erik",
-            "email": "erik@erik.xyz"
+            "email": "erik@erik.xyz",
+            "role": "Developer"
         }
     ],
+    "support": {
+        "email": "erik@erik.xyz",
+        "issues": "https://github.com/erikwang2013/xhprof-webman/issues",
+        "source": "https://github.com/erikwang2013/xhprof-webman"
+      },
     "minimum-stability": "dev",
     "require": {
-        "php": ">=7.4"
+        "php": ">=7.4",
+        "workerman/webman": "*",
+        "monolog/monolog": "*",
+        "illuminate/redis": "*"
     },
     "autoload": {
         "psr-4": {
