--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=7.4",
+        "ext-xhprof": "*",
         "workerman/webman": "*",
         "monolog/monolog": "*",
         "illuminate/redis": "*"
@@ -32,5 +33,11 @@
         "psr-4": {
             "Erik\\Xhprof\\Webman\\": "src/Webman"
         }
-    }
+    },
+    "repositories": {
+        "packagist": {
+          "type": "composer",
+          "url": "https://mirrors.aliyun.com/composer/"
+        }
+      }
 }
