--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "type": "library",
     "license": "MIT",
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "authors": [
         {
             "name": "erik",
