--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "erikwang2013/xhprof-webman",
+    "name": "aaron/xhprof-webman",
     "description": "Xhprof web interface browsing, suitable for web, larravel, tp and other frameworks",
     "keywords": [
         "erikwang2013",
