更新关键词

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Xhprof web interface browsing, suitable for web, larravel, tp and other frameworks",
     "keywords": [
         "aaron",
+        "aaron-dev",
         "erik",
         "xhprof",
         "webman"
