--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "type": "library",
     "license": "MIT",
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "erik",
